[gd_scene load_steps=3 format=3 uid="uid://bahfxvu3r7io"]

[ext_resource type="Script" path="res://scenes/native_confirmation_dialog.gd" id="1_1ix4v"]
[ext_resource type="Theme" uid="uid://dghnjlpplxvrd" path="res://main_theme.tres" id="1_skr1f"]

[node name="NativeConfirmationDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_skr1f")
script = ExtResource("1_1ix4v")

[node name="NativeConfirmationDialog" type="NativeConfirmationDialog" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 90
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 90.0
offset_top = 60.0
offset_right = 1062.0
offset_bottom = 588.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
offset_right = 972.0
offset_bottom = 31.0
theme_type_variation = &"HeaderSmall"
text = "NativeConfirmationDialog"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 46.0
offset_right = 972.0
offset_bottom = 104.0

[node name="Title" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2i(150, 0)
offset_right = 612.0
offset_bottom = 58.0
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Lable" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Title"]
offset_right = 612.0
offset_bottom = 26.0
text = "Title"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/Title"]
offset_top = 26.0
offset_right = 612.0
offset_bottom = 58.0
size_flags_horizontal = 3
text = "Please Confirm..."
caret_blink = true
caret_blink_interval = 0.5

[node name="Icon" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2i(150, 0)
offset_left = 642.0
offset_right = 792.0
offset_bottom = 58.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Icon"]
offset_right = 150.0
offset_bottom = 26.0
text = "Icon"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Icon"]
offset_top = 26.0
offset_right = 150.0
offset_bottom = 58.0
item_count = 4
selected = 3
popup/item_0/text = "Info"
popup/item_0/id = 0
popup/item_1/text = "Warning"
popup/item_1/id = 1
popup/item_2/text = "Error"
popup/item_2/id = 2
popup/item_3/text = "Question"
popup/item_3/id = 3

[node name="ButtonsTexts" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2i(150, 0)
offset_left = 822.0
offset_right = 972.0
offset_bottom = 58.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsTexts"]
offset_right = 150.0
offset_bottom = 26.0
text = "Buttons Texts"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsTexts"]
offset_top = 26.0
offset_right = 150.0
offset_bottom = 58.0
item_count = 2
selected = 0
popup/item_0/text = "OK Cancel"
popup/item_0/id = 0
popup/item_1/text = "Yes No"
popup/item_1/id = 1

[node name="Text" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 119.0
offset_right = 972.0
offset_bottom = 235.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Text"]
offset_right = 972.0
offset_bottom = 26.0
text = "Text"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/Text"]
custom_minimum_size = Vector2i(0, 90)
offset_top = 26.0
offset_right = 972.0
offset_bottom = 116.0

[node name="Result" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 250.0
offset_right = 972.0
offset_bottom = 308.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Result"]
offset_right = 972.0
offset_bottom = 26.0
text = "Result"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Result"]
offset_top = 26.0
offset_right = 972.0
offset_bottom = 58.0
size_flags_horizontal = 3
editable = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 323.0
offset_right = 972.0
offset_bottom = 376.0
theme_override_constants/margin_top = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
offset_top = 15.0
offset_right = 972.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 2

[node name="Hide" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
offset_left = 779.0
offset_right = 864.0
offset_bottom = 38.0
size_flags_vertical = 4
theme_type_variation = &"GhostButton"
text = "Hide"

[node name="Show" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
offset_left = 879.0
offset_right = 972.0
offset_bottom = 38.0
size_flags_vertical = 4
text = "Show"

[connection signal="cancelled" from="NativeConfirmationDialog" to="." method="set_cancelled"]
[connection signal="confirmed" from="NativeConfirmationDialog" to="." method="set_confirmed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Title/LineEdit" to="NativeConfirmationDialog" method="set_title"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/Icon/OptionButton" to="NativeConfirmationDialog" method="set_icon"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonsTexts/OptionButton" to="NativeConfirmationDialog" method="set_buttons_texts"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Text/TextEdit" to="." method="text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Hide" to="NativeConfirmationDialog" method="hide"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Show" to="NativeConfirmationDialog" method="show"]
